<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:top="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.android.biubiu.component.title.TopTitleView
                android:id="@+id/top_title_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/top_title_height"
                android:background="@color/main_green"
                top:bothSideSize="60dp"
                top:leftDrawable="@drawable/back_main"
                top:title="@string/verify_title" />

            <ImageView
                android:id="@+id/photo_imv"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginTop="26dp"
                android:src="@drawable/verify_photo_btn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/verify_txt1"
                android:textColor="@color/text_huise"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/verify_txt2"
                android:textColor="@color/super_text_black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:text="@string/verify_txt3"
                android:textColor="@color/super_text_black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/verify_txt4"
                android:textColor="@color/text_huise"
                android:textSize="11sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/verify_txt5"
                android:textColor="@color/super_text_black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/verify_txt6"
                android:textColor="@color/text_huise"
                android:textSize="11sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:text="@string/verify_txt7"
                android:textColor="@color/text_huise"
                android:textSize="11sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/verify_txt8"
                android:textColor="@color/text_huise"
                android:textSize="11sp" />

            <EditText
                android:id="@+id/code_et"
                android:layout_width="140dp"
                android:layout_height="35dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/verify_code_etbg"
                android:gravity="center_vertical"
                android:hint="123456"
                android:textColorHint="#dddddd"
                android:textSize="14sp" />

            <Button
                android:id="@+id/complete_btn"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginBottom="35dp"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                android:background="@drawable/biu_btn_disabled"
                android:text="@string/complete"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>
    <include
        layout="@layout/loading_layout"
        android:visibility="gone" />

    <include
        layout="@layout/load_error_layout"
        android:visibility="gone" />
</RelativeLayout>
