<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/set_biu_bg"
    android:orientation="vertical">
    <!--title-->
    <RelativeLayout
        android:id="@+id/top__send_biu_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_title_height"
        android:layout_alignParentTop="true"
        android:background="@color/mine_chird_top_bg">

        <RelativeLayout
            android:id="@+id/back_send_biu_mine_rl"
            android:layout_width="65dp"
            android:layout_height="44dp"
            android:background="@drawable/kongjianruoqu_bg"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_biu_back"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/change_name_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/send_biu_title"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/send_biu"
        android:layout_below="@+id/top__send_biu_rl">

        <RelativeLayout
            android:id="@+id/relativeLayout1_send_biu_rl"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginTop="74dp"
            android:background="@drawable/send_biu_bg"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/id_send_biu_top_rl"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="67dp"
                android:background="@drawable/send_biu_tag_bg">

                <EditText
                    android:id="@+id/topic_send_biu_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@null"
                    android:hint="@string/send_biu_add_topic_tags"
                    android:maxLength="50"
                    android:padding="10dp"
                    android:textColor="@color/send_biu_tag"
                    android:textColorHint="@color/send_biu_tag_hint"
                    android:textSize="12sp" />

                <LinearLayout
                    android:id="@+id/size_text_sendbiu_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/number_send_biu_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_biu_number" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_biu_allNumber" />
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/send_biu_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="21dp"
                android:layout_marginTop="7dp"
                android:layout_below="@+id/id_send_biu_top_rl"
                android:gravity="center"
                android:text="@string/send_biu_tag_tip"
                android:textColor="#b0b0b0"
                android:textSize="10sp" />

            <LinearLayout
                android:id="@+id/grab_random_layout"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="71dp"
                android:layout_below="@+id/send_biu_tips"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dip"
                    android:layout_height="0.5dp"
                    android:layout_weight="1"
                    android:background="#ececec" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/grab_biu_tag"
                    android:textColor="#fd9426"
                    android:textSize="12sp" />

                <View
                    android:layout_width="0dip"
                    android:layout_height="0.5dp"
                    android:layout_weight="1"
                    android:background="#ececec" />
            </LinearLayout>

            <ScrollView
                android:id="@+id/flow_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/flow_linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/id_send_biu_top_rl"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <com.android.biubiu.component.customview.Flowlayout
                        android:id="@+id/flowlayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp" />
                </LinearLayout>
            </ScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/id_send_biu_top_rl">

                <include layout="@layout/loading_layout" />

                <include layout="@layout/load_error_layout" />
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/photo_head_senbiu_img_bg"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:src="@drawable/biu_imageview_photo_circle" />

            <ImageView
                android:id="@+id/photo_head_senbiu_img"
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:layout_centerInParent="true"
                android:src="@drawable/photo_fail" />
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/send_biu"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/biu_btn_disabled"
        android:text="@string/send_biu_send"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:visibility="visible"/>
</RelativeLayout>